added data base and emp page and chart info etc.....

--- a/goodrProj/appsettings.json
+++ b/goodrProj/appsettings.json
@@ -1,9 +1,18 @@
 {
+  "ConnectionStrings": {
+    "goodrProjContext": "Data Source=DESKTOP-UJDK4OF;Initial Catalog=ResumeDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "Users": "Data Source=DESKTOP-UJDK4OF;Initial Catalog=ResumeDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Azure": {
+    "SignalR": {
+      "Enabled": "true"
+    }
+  }
 }
